# Fast_API

./: .gitignore  README.md  main.py  path_parameters.py  requirements.txt
01_Fast_API_Basics/: __init__.py
Inventory_System/: .gitignore  README.md  requirements.txt
Inventory_System/app/: main.py
Inventory_System/app/api/: main.py
Inventory_System/app/api/middlewares/: auth_middleware.py
Inventory_System/app/api/routes/: product.py  products.py  users.py
Inventory_System/app/api/utils/: user_auth_utils.py
Inventory_System/app/core/: config.py  db.py
Inventory_System/app/models/: common.py  product.py  products.py  user.py  users.py
Inventory_System/app/schemas/: product_schema.py
_02_Fast_api_with_Postgresql/: __init__.py  config.py  db.py  models.py
card_service/: Dockerfile  README.md  hello.py  my_agent.py  pyproject.toml  requirements.txt
card_service/app/: crud.py  database.py  main.py  models.py  schemas.py
card_service/app/config/: settings.py
student_management_app/: package-lock.json  package.json
student_management_app/app/: layout.js  page.js
